--- a/CourceExamples/app/src/main/AndroidManifest.xml
+++ b/CourceExamples/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="by.it.academy.md_ad2_15_20">
+    package="by.it.academy.mdad21520">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="by.it.academy.mdad21520.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
