Added module for recyclerView

--- a/CourceExamples/recyclerview/build.gradle
+++ b/CourceExamples/recyclerview/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        applicationId "by.it.academy.layoutexample"
+        applicationId "by.it.academy.recyclerview"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
