--- a/CourceExamples/mistakes/src/main/AndroidManifest.xml
+++ b/CourceExamples/mistakes/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="by.it.academy.storage">
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    package="by.it.academy.mistakes">
 
     <application
         android:allowBackup="true"
@@ -11,14 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FileActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<!--        <activity android:name=".FileActivity"> </activity>-->
     </application>
 
 </manifest>
