--- a/CourceExamples/settings.gradle
+++ b/CourceExamples/settings.gradle
@@ -1,3 +1,5 @@
+include ':serviceexample'
+include ':broadcastreciverexample'
 include ':async'
 include ':kotlinappexample'
 include ':kotlinexample'
