--- a/CourceExamples/broadcastreciverexample/src/main/AndroidManifest.xml
+++ b/CourceExamples/broadcastreciverexample/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="by.it.academy.kotlinexample">
+    package="by.it.academy.broadcastreciverexample">
 
     <application
         android:allowBackup="true"
@@ -12,9 +12,18 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+<!--        <receiver android:name=".TimeChangeBroadcastReceiver">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.TIMEZONE_CHANGED" />-->
+<!--                <action android:name="android.intent.action.TIME_SET" />-->
+<!--            </intent-filter>-->
+<!--        </receiver>-->
+
     </application>
 
 </manifest>
